[metadata]
name = open-prime-rando
description = An open source randomizer patcher for Metroid Prime 2 and 3.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/randovania/open-prime-rando
author = Henrique Gemignani

classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    retro-data-structures>=0.14.0
    jsonschema>=4.0.0
    ppc-asm

include_package_data = True
zip_safe = False
python_requires = >=3.9

[options.packages.find]
exclude =
    test

[options.package_data]
open_prime_rando.echoes =
    schema.json
    custom_assets/*

#
# Entry Points for PyInstaller
# ---------------------------------
[options.entry_points]
pyinstaller40 =
    # .. _hook_registration:
    #
    # **Hook registration**: This entry point refers to a function
    # that will be invoked with no parameters. It must return a
    # sequence of strings, each element of which provides an
    # additional absolute path to search for hooks. This is equivalent
    # to passing the ``additional-hooks-dir`` `command-line option
    # <https://pyinstaller.readthedocs.io/en/stable/usage.html#what-to-bundle-where-to-search>`_
    # to PyInstaller for each string in the sequence.
    #
    # In this project, the function is ``get_hook_dirs``.
    hook-dirs = open_prime_rando.__pyinstaller:get_hook_dirs
